# scxml ioprocessor

OPTION(WITH_IOPROC_SCXML "Build the scxml i/o processor" ON)
if (WITH_IOPROC_SCXML)
	set(USCXML_IOPROCESSORS "scxml ${USCXML_IOPROCESSORS}")
	file(GLOB_RECURSE SCXML_IOPROCESSOR
		scxml/*.cpp
		scxml/*.h
	)
	list (APPEND USCXML_FILES ${SCXML_IOPROCESSOR})
endif()

OPTION(WITH_IOPROC_BASICHTTP "Build the basichttp i/o processor" ON)
if (WITH_IOPROC_BASICHTTP)
	set(USCXML_IOPROCESSORS "basichttp ${USCXML_IOPROCESSORS}")
	file(GLOB_RECURSE BASICHTTP_IOPROCESSOR
		basichttp/*.cpp
		basichttp/*.h
	)
	list (APPEND BASICHTTP_IOPROCESSOR "")
	list (APPEND USCXML_FILES ${BASICHTTP_IOPROCESSOR})
endif()

set(USCXML_INCLUDE_DIRS ${USCXML_INCLUDE_DIRS} PARENT_SCOPE)
set(USCXML_OPT_LIBS ${USCXML_OPT_LIBS} PARENT_SCOPE)
set(USCXML_FILES ${USCXML_FILES} PARENT_SCOPE)
set(USCXML_IOPROCESSORS ${USCXML_IOPROCESSORS} PARENT_SCOPE)
